--- a/app/www/index.html
+++ b/app/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>BC Scan</title>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:; connect-src https://localhost:7070 https://sistemas.brasilcursinhos.org">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:; connect-src https://localhost:7070 http://localhost:7373 http://192.168.0.107:7373 https://sistemas.brasilcursinhos.org">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
@@ -47,6 +47,7 @@
                 <form class="col-12 col-sm-6 d-flex flex-column justify-content-center">
                   <h4 class="card-title mb-2 w-100 text-center">Seja bem-vindo!</h4>
                   <h6 class="card-subtitle mb-3 text-muted w-100 text-center">Realize o login para continuar</h6>
+                  <p id="msg"></p>
                   <div class="row mb-3">
                     <div class="col-12">
                       <label for="user"><b>Usuário:</b></label>
@@ -78,10 +79,29 @@
       <section id="home">
         <div class="container-fluid page-content">
           <h2>Bem vindo!</h2>
+          <p>Selecione uma opção abaixo</p>
+          <p><button class="btn btn-secondary-bc w-100 btn-select-option" value="check">Verificar cadastro</button></p>
+          <p><button class="btn btn-secondary-bc w-100 btn-select-option" value="register">Credenciamento</button></p>
+          <p><button class="btn btn-secondary-bc w-100 btn-select-option" value="presence">Cadastrar presença</button></p>
+        </div>
+      </section>
+      <section id="activities">
+        <div class="container-fluid page-content">
+          <p>Selecione a atividade para registro</p>
+          <div id="activities-list">
+            <p><button class="btn btn-secondary-bc w-100 btn-activity" value="1">Atividade 01</button></p>
+          </div>
         </div>
       </section>
       <section id="scan">
-
+        <div class="container-fluid page-content">
+          <p>Scan</p>
+          <div>
+            <canvas id="canvas"></canvas>
+          </div>
+          
+          <button id="btn-scan" class="btn btn-secondary-bc w-100 my-3">Habilitar Scan</button>
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -94,6 +114,7 @@
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/additional-methods.min.js"></script>
     <script src="js/messages_pt_BR.min.js"></script>
+    <script src="js/jsQR.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
